Fix assertion failure when hiding a SplitView with only one item

Check for -1 when calling handleIndexForSplitIndex().

Change-Id: I81021b64265ace0c47269ea54e538a2725c84b79
Fixes: QTBUG-79270
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>